BACKLOG-21505: Avoid overlapping by not displaying header when not current (#990)
* BACKLOG-21505: Avoid overlapping by not displaying header when not current

* BACKLOG-21505: Restore header for selected box if only item. Change colors between selected and hovered

--- a/src/javascript/JContent/EditFrame/Box.scss
+++ b/src/javascript/JContent/EditFrame/Box.scss
@@ -1,6 +1,3 @@
-$color-accent_light: rgba(99, 209, 255, 0.6);
-$color-accent: rgb(0, 160, 227);
-
 .root {
     position: absolute;
     z-index: 1200;
@@ -122,7 +119,7 @@ $color-accent: rgb(0, 160, 227);
 }
 
 :global(.noprefix) .dropTarget {
-    outline: 4px solid $color-accent_light;
+    outline: 4px solid var(--color-accent_light);
     outline-offset: 4px;
 }
 
@@ -135,9 +132,9 @@ $color-accent: rgb(0, 160, 227);
     height: 50px;
 
     font-size: 16px;
-    color: $color-accent;
+    color: var(--color-accent);
 
-    outline: 4px dashed $color-accent_light;
+    outline: 4px dashed var(--color-accent_light);
     outline-offset: 4px;
 
     content: var(--droplabel);
@@ -145,4 +142,16 @@ $color-accent: rgb(0, 160, 227);
 
 :global .moonstone-tableHead {
     background-color: transparent;
+}
+
+.selected {
+    z-index: 1200;
+
+    border: 2px solid var(--color-accent);
+}
+
+.current {
+    z-index: 13000;
+
+    border: 2px solid var(--color-gray);
 }
